--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: cornflowerblue;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  color: #333;
+  line-height: 1.3;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  padding: 2em;
+  font-size: 1.4em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main {
+  flex: 1;
+  width: 100%;
+  padding: 2em;
+  background-color: white;
+  align-self: center;
+  font-size: 1.2em;
 }
+
+@media (min-width: 64em) {
+  .main {
+      width: 56em;
+    }
+}
+
