Added shopping cart to laempresa

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@
 .header {
   padding: 2em;
   font-size: 1.4em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .main {
